@@ -17,9 +17,10 @@
 package org.jsonschema2pojo.integration;
 
 import static java.lang.reflect.Modifier.*;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.jsonschema2pojo.integration.util.CodeGenerationHelper.*;
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
@@ -30,10 +31,9 @@ import java.math.BigInteger;
 import org.apache.commons.lang3.StringUtils;
 import org.hamcrest.core.IsInstanceOf;
 import org.jsonschema2pojo.integration.util.Jsonschema2PojoRule;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
@@ -43,16 +43,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 @SuppressWarnings("rawtypes")
 public class EnumIT {
 
-    @ClassRule public static Jsonschema2PojoRule classSchemaRule = new Jsonschema2PojoRule();
-    @Rule public Jsonschema2PojoRule schemaRule = new Jsonschema2PojoRule();
+    @RegisterExtension public static Jsonschema2PojoRule classSchemaRule = new Jsonschema2PojoRule();
+    @RegisterExtension public Jsonschema2PojoRule schemaRule = new Jsonschema2PojoRule();
 
     private static Class<?> parentClass;
     private static Class<Enum<?>> enumClass;
 
-    @BeforeClass
+    @BeforeAll
     @SuppressWarnings("unchecked")
     public static void generateAndCompileEnum() throws ClassNotFoundException {
-
         ClassLoader resultsClassLoader = classSchemaRule.generateAndCompile("/schema/enum/typeWithEnumProperty.json", "com.example", config("propertyWordDelimiters", "_"));
 
         parentClass = resultsClassLoader.loadClass("com.example.TypeWithEnumProperty");
@@ -110,13 +109,10 @@ public class EnumIT {
 
         Method fromValue = enumClass.getMethod("fromValue", String.class);
 
-        try {
-            fromValue.invoke(enumClass, "something invalid");
-            fail();
-        } catch (InvocationTargetException e) {
-            assertThat(e.getCause(), is(instanceOf(IllegalArgumentException.class)));
-        }
-
+        final InvocationTargetException exception = assertThrows(
+                InvocationTargetException.class,
+                () -> fromValue.invoke(enumClass, "something invalid"));
+        assertThat(exception.getCause(), is(instanceOf(IllegalArgumentException.class)));
     }
 
     @Test
@@ -263,7 +259,7 @@ public class EnumIT {
         Class<?> typeWithEnumProperty = resultsClassLoader.loadClass("com.example.EnumWithCustomJavaNames");
         Class<Enum> enumClass = (Class<Enum>) resultsClassLoader.loadClass("com.example.EnumWithCustomJavaNames$EnumProperty");
 
-        Object valueWithEnumProperty = typeWithEnumProperty.newInstance();
+        Object valueWithEnumProperty = typeWithEnumProperty.getDeclaredConstructor().newInstance();
         Method enumSetter = typeWithEnumProperty.getMethod("setEnumProperty", enumClass);
         enumSetter.invoke(valueWithEnumProperty, enumClass.getEnumConstants()[2]);
         assertThat(enumClass.getEnumConstants()[0].name(), is("ONE"));
@@ -311,7 +307,7 @@ public class EnumIT {
             String expectedValue,
             ObjectMapper objectMapper)
             throws ReflectiveOperationException, IOException {
-        Object valueWithEnumProperty = typeWithEnumProperty.newInstance();
+        Object valueWithEnumProperty = typeWithEnumProperty.getDeclaredConstructor().newInstance();
         Method enumSetter = typeWithEnumProperty.getMethod("set" + StringUtils.capitalize(propertyName), enumClass);
         enumSetter.invoke(valueWithEnumProperty, enumClass.getEnumConstants()[enumIndex]);
 
@@ -363,7 +359,7 @@ public class EnumIT {
         Class<Enum> enumClass = (Class<Enum>) resultsClassLoader.loadClass("com.example.enums.IntegerEnumToSerialize$TestEnum");
         
         // create an instance
-        Object valueWithEnumProperty = typeWithEnumProperty.newInstance();
+        Object valueWithEnumProperty = typeWithEnumProperty.getDeclaredConstructor().newInstance();
         Method enumSetter = typeWithEnumProperty.getMethod("setTestEnum", enumClass);
         
         // call setTestEnum(TestEnum.ONE)
@@ -386,7 +382,7 @@ public class EnumIT {
     @SuppressWarnings("unchecked")
     public void jacksonCanMarshalEnums() throws NoSuchMethodException, InstantiationException, IllegalAccessException, InvocationTargetException, IOException {
 
-        Object valueWithEnumProperty = parentClass.newInstance();
+        Object valueWithEnumProperty = parentClass.getDeclaredConstructor().newInstance();
         Method enumSetter = parentClass.getMethod("setEnumProperty", enumClass);
         enumSetter.invoke(valueWithEnumProperty, enumClass.getEnumConstants()[2]);
 
